--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reviews-and-ratings",
+  "name": "store-reviews-and-ratings",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
